--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Word Translation App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <style>
         table {
             border-collapse: collapse;
@@ -23,6 +25,12 @@
         button {
             margin-right: 10px;
             padding: 5px 10px;
+        }
+
+        @media (max-width: 792px) {
+            table {
+                width: 100%;
+            }
         }
     </style>
 </head>
