--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             border-collapse: collapse;
             width: 50%;
             margin-top: 20px;
+            margin-bottom: 40px;
         }
 
         th, td {
