--- a/index.html
+++ b/index.html
@@ -190,7 +190,59 @@
     <tr><td class="col-en">decrease</td><td class="col-hy">նվազել</td></tr>
     <tr><td class="col-en">Plan out a trip</td><td class="col-hy">Պլանավորել ճանապարհորդություն</td></tr>
     <tr><td class="col-en">By myself = on my own</td><td class="col-hy">ինքնուրույն</td></tr>
-
+        
+    <!--    5th week words -->
+    <tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
+    <tr><td class="col-en">Get engaged = engage</td><td class="col-hy">նշանադրվել</td></tr>
+    <tr><td class="col-en">Tell somebody = say to somebody</td><td class="col-hy">Ասել մեկին</td></tr>
+    <tr><td class="col-en">Get married = marry</td><td class="col-hy">ամուսնանալ</td></tr>
+    <tr><td class="col-en">He said to me = he told me</td><td class="col-hy">Նա ասաց ինձ</td></tr>
+    <tr><td class="col-en">engage</td><td class="col-hy">ներգրավել</td></tr>
+    <tr><td class="col-en">As + subject + said…</td><td class="col-hy">Ինչպես ասել է․․․</td></tr>
+    <tr><td class="col-en">To be engaged in</td><td class="col-hy">Ներգրավված լինել</td></tr>
+    <tr><td class="col-en">As Ani and Kristina said…</td><td class="col-hy">Ինչպես Անին և Քրիստինան ասացին․․․</td></tr>
+    <tr><td class="col-en">Mark out = differentiate</td><td class="col-hy">տարբերել</td></tr>
+    <tr><td class="col-en">So + adjective</td><td class="col-hy">այնքան․․․</td></tr>
+    <tr><td class="col-en">Let + dative</td><td class="col-hy">Թույլ տալ ինչ-որ մեկին</td></tr>
+    <tr><td class="col-en">Such + adjective + noun</td><td class="col-hy">այնպիսի․․․</td></tr>
+    <tr><td class="col-en">Let me</td><td class="col-hy">Թույլ տուր ինձ</td></tr>
+    <tr><td class="col-en">So boring</td><td class="col-hy">Այնքան ձանձրալի է</td></tr>
+    <tr><td class="col-en">Let the others live</td><td class="col-hy">Թող մյուսներն ապրեն</td></tr>
+    <tr><td class="col-en">Such a boring day</td><td class="col-hy">Այնքան ձանձրալի օր է</td></tr>
+    <tr><td class="col-en">Depend on</td><td class="col-hy">Կախված ինչ-որ բանից</td></tr>
+    <tr><td class="col-en">Annoy = irritate</td><td class="col-hy">նյարդայնացնել</td></tr>
+    <tr><td class="col-en">It depends on</td><td class="col-hy">Դա կախված է․․․</td></tr>
+    <tr><td class="col-en">To be annoying = to be irritating</td><td class="col-hy">Նյարդայնացնող լինել</td></tr>
+    <tr><td class="col-en">It depends on situation</td><td class="col-hy">Դա կախված է իրավիճակից</td></tr>
+    <tr><td class="col-en">To be annoyed = to be irritated</td><td class="col-hy">Նյարդայնացած լինել</td></tr>
+    <tr><td class="col-en">Quality = high-quality</td><td class="col-hy">Բարձրորակ, որակյալ</td></tr>
+    <tr><td class="col-en">trip</td><td class="col-hy">ճանապարհորդություն</td></tr>
+    <tr><td class="col-en">spare</td><td class="col-hy">Ազատ, դատարկ</td></tr>
+    <tr><td class="col-en">spread</td><td class="col-hy">տարածել</td></tr>
+    <tr><td class="col-en">Sphere (ph=ֆ)</td><td class="col-hy">ոլորտ</td></tr>
+    <tr><td class="col-en">I have never + verb 3</td><td class="col-hy">Ես երբեք չեմ արել</td></tr>
+    <tr><td class="col-en">Aim = goal</td><td class="col-hy">նպատակ</td></tr>
+    <tr><td class="col-en">I never + verb 1</td><td class="col-hy">Ես երբեք չեմ անում</td></tr>
+    <tr><td class="col-en">To have a rest = relax</td><td class="col-hy">հանգստանալ</td></tr>
+    <tr><td class="col-en">I have never travelled</td><td class="col-hy">Ես երբեք չեմ եղել․․․</td></tr>
+    <tr><td class="col-en">destination</td><td class="col-hy">վերջնակետ</td></tr>
+    <tr><td class="col-en">I never travel</td><td class="col-hy">Ես երբեք չեմ ճամփորդում</td></tr>
+    <tr><td class="col-en">Travel to = visit (no "to")</td><td class="col-hy">Այցելել երկիր, քաղաք</td></tr>
+    <tr><td class="col-en">In general</td><td class="col-hy">առհասարակ</td></tr>
+    <tr><td class="col-en">I want to travel to… = I want to visit…</td><td class="col-hy">Ես ուզում եմ լինել․․երկրում</td></tr>
+    <tr><td class="col-en">Except for = beside</td><td class="col-hy">բացի</td></tr>
+    <tr><td class="col-en">Discover = explore</td><td class="col-hy">բացահայտել</td></tr>
+    <tr><td class="col-en">besides</td><td class="col-hy">Ի լրումն, նաև</td></tr>
+    <tr><td class="col-en">More + long adjective</td><td class="col-hy">ավելի</td></tr>
+    <tr><td class="col-en">More longer</td><td class="col-hy">Ավելի երկար</td></tr>
+    <tr><td class="col-en">Er + short adjective</td><td class="col-hy">ավելի</td></tr>
+    <tr><td class="col-en">More interestinger</td><td class="col-hy">Ավելի հետաքրքիր</td></tr>
+    <tr><td class="col-en">Better (exception to rule)</td><td class="col-hy">Ավելի լավ</td></tr>
+    <tr><td class="col-en">certainly</td><td class="col-hy">անշուշտ</td></tr>
+    <tr><td class="col-en">What to do + well</td><td class="col-hy">(ինչպես) Լավ կերպով, ձևով</td></tr>
+    <tr><td class="col-en">uncertain</td><td class="col-hy">անորոշ</td></tr>
+    <tr><td class="col-en">Good + what</td><td class="col-hy">(ինչպիսի) լավ (ը)</td></tr>
+    <tr><td class="col-en">By + transport (by car)</td><td class="col-hy">մեքենայով</td></tr>
     </tbody>
 </table>
 
