--- a/index.html
+++ b/index.html
@@ -243,6 +243,58 @@
     <tr><td class="col-en">uncertain</td><td class="col-hy">անորոշ</td></tr>
     <tr><td class="col-en">Good + what</td><td class="col-hy">(ինչպիսի) լավ (ը)</td></tr>
     <tr><td class="col-en">By + transport (by car)</td><td class="col-hy">մեքենայով</td></tr>
+    <tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
+    <tr><td class="col-en">satisfaction</td><td class="col-hy">բավարարվածություն</td></tr>
+<tr><td class="col-en">reveal</td><td class="col-hy">բացահայտել</td></tr>
+<tr><td class="col-en">headmaster</td><td class="col-hy">Դպրոցի տնօրեն</td></tr>
+<tr><td class="col-en">To be satisfied with</td><td class="col-hy">Բավարարված լինել ինչ-որ բանով</td></tr>
+<tr><td class="col-en">approval</td><td class="col-hy">համաձայնություն</td></tr>
+<tr><td class="col-en">Come to… mind</td><td class="col-hy">Գալ մտքին</td></tr>
+<tr><td class="col-en">Turn out</td><td class="col-hy">պարզվել</td></tr>
+<tr><td class="col-en">On/in my mind</td><td class="col-hy">մտքում</td></tr>
+<tr><td class="col-en">It turned out that…</td><td class="col-hy">Պարզվեց, որ</td></tr>
+<tr><td class="col-en">Have in mind</td><td class="col-hy">Ունենալ մտքում</td></tr>
+<tr><td class="col-en">Later = afterwards</td><td class="col-hy">Հետո, ավելի ուշ</td></tr>
+<tr><td class="col-en">Awful = terrible</td><td class="col-hy">ահավոր</td></tr>
+<tr><td class="col-en">gather</td><td class="col-hy">Հավաքել, հավաքվել</td></tr>
+<tr><td class="col-en">awesome</td><td class="col-hy">հրաշալի</td></tr>
+<tr><td class="col-en">together</td><td class="col-hy">միասին</td></tr>
+<tr><td class="col-en">envy</td><td class="col-hy">նախանձել</td></tr>
+<tr><td class="col-en">person</td><td class="col-hy">Անձ (հոգնակի չունի)</td></tr>
+<tr><td class="col-en">Football field</td><td class="col-hy">Ֆուտբոլի դաշտ</td></tr>
+<tr><td class="col-en">people</td><td class="col-hy">Մարդիկ (միշտ հոգնակի)</td></tr>
+<tr><td class="col-en">clay</td><td class="col-hy">կավ</td></tr>
+<tr><td class="col-en">toe</td><td class="col-hy">Ոտքի մատի մասը (թո)</td></tr>
+<tr><td class="col-en">Mud</td><td class="col-hy">ցեխ</td></tr>
+<tr><td class="col-en">conceal</td><td class="col-hy">թաքցնել</td></tr>
+<tr><td class="col-en">Mood</td><td class="col-hy">տրամադրություն</td></tr>
+<tr><td class="col-en">besides</td><td class="col-hy">Բացի դրանից</td></tr>
+<tr><td class="col-en">scary</td><td class="col-hy">վախենալու</td></tr>
+<tr><td class="col-en">beside</td><td class="col-hy">կողքին</td></tr>
+<tr><td class="col-en">scared</td><td class="col-hy">վախեցած</td></tr>
+<tr><td class="col-en">Except for</td><td class="col-hy">բացառությամբ</td></tr>
+<tr><td class="col-en">Pass away = die</td><td class="col-hy">մահանալ</td></tr>
+<tr><td class="col-en">remarkable</td><td class="col-hy">հիշարժան</td></tr>
+<tr><td class="col-en">superstition</td><td class="col-hy">սնահավատություն</td></tr>
+<tr><td class="col-en">Want to do</td><td class="col-hy">Ուզենալ անել</td></tr>
+<tr><td class="col-en">superstitious</td><td class="col-hy">սնահավատ</td></tr>
+<tr><td class="col-en">quiet</td><td class="col-hy">Լուռ, հանգիստ</td></tr>
+<tr><td class="col-en">Anxious = restless</td><td class="col-hy">անհանգիստ</td></tr>
+<tr><td class="col-en">quite</td><td class="col-hy">բավականին</td></tr>
+<tr><td class="col-en">contempt</td><td class="col-hy">նախատանք</td></tr>
+<tr><td class="col-en">Used to do</td><td class="col-hy">Նախկինում անել</td></tr>
+<tr><td class="col-en">Look with contempt</td><td class="col-hy">Նախատանքով նայել</td></tr>
+<tr><td class="col-en">I used to see = I saw it often</td><td class="col-hy">Առաջ հաճախ տեսնում էի</td></tr>
+<tr><td class="col-en">subconscious</td><td class="col-hy">ենթագիտակցություն</td></tr>
+<tr><td class="col-en">terrible</td><td class="col-hy">ահավոր</td></tr>
+<tr><td class="col-en">unconscious</td><td class="col-hy">անգիտակցաբար</td></tr>
+<tr><td class="col-en">terrifying</td><td class="col-hy">վախեցնող</td></tr>
+<tr><td class="col-en">scientific</td><td class="col-hy">գիտական</td></tr>
+<tr><td class="col-en">Fear - fears</td><td class="col-hy">Վախ - վախեր</td></tr>
+<tr><td class="col-en">explanation</td><td class="col-hy">բացատրություն</td></tr>
+<tr><td class="col-en">To fear = to be afraid of</td><td class="col-hy">վախենալ</td></tr>
+<tr><td class="col-en">The movie was scary = I was scared of the movie</td><td class="col-hy">Ֆիլմը վախենալու էր, ես վախեցա ֆիլմից</td></tr>
+
     </tbody>
 </table>
 
