--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <tr><td class="col-en">disturb</td><td class="col-hy">անհանգստացնել</td></tr>
     <tr><td class="col-en">agree</td><td class="col-hy">համաձայնվել</td></tr>
 
-    <!-- New Words -->
+ <tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
     <tr><td class="col-en">unusual</td><td class="col-hy">անսովոր</td></tr>
     <tr><td class="col-en">realize</td><td class="col-hy">Գիտակցել; իրականցնել</td></tr>
     <tr><td class="col-en">habit</td><td class="col-hy">սովորություն</td></tr>
@@ -118,7 +118,7 @@
     <tr><td class="col-en">survive</td><td class="col-hy">գոյատևել</td></tr>
     <tr><td class="col-en">whom</td><td class="col-hy">Տալ ո՞ւմ</td></tr>
 
-    <!--    3rd week words -->
+ <tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
     <tr><td class="col-en">-How are you?</td><td class="col-hy">-Ինչպե՞ս ես։</td></tr>
     <tr><td class="col-en">-So-so = as all that</td><td class="col-hy">-ոչինչ (յոլա)</td></tr>
     <tr><td class="col-en">worm</td><td class="col-hy">ճիճու</td></tr>
@@ -149,7 +149,7 @@
     <tr><td class="col-en">Make decision</td><td class="col-hy">Որոշում կայացնել</td></tr>
     <tr><td class="col-en">Must + verb</td><td class="col-hy">Պետք է անել (to չկա)</td></tr>
 
-    <!--    4th week words -->
+ <tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
     <tr><td class="col-en">Perhaps = maybe</td><td class="col-hy">գուցե</td></tr>
     <tr><td class="col-en">If, when + present</td><td class="col-hy">Will Չի դրվում</td></tr>
     <tr><td class="col-en">quote</td><td class="col-hy">ասույթ</td></tr>
@@ -191,7 +191,7 @@
     <tr><td class="col-en">Plan out a trip</td><td class="col-hy">Պլանավորել ճանապարհորդություն</td></tr>
     <tr><td class="col-en">By myself = on my own</td><td class="col-hy">ինքնուրույն</td></tr>
         
-    <!--    5th week words -->
+ <tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
     <tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
     <tr><td class="col-en">Get engaged = engage</td><td class="col-hy">նշանադրվել</td></tr>
     <tr><td class="col-en">Tell somebody = say to somebody</td><td class="col-hy">Ասել մեկին</td></tr>
@@ -294,6 +294,28 @@
 <tr><td class="col-en">explanation</td><td class="col-hy">բացատրություն</td></tr>
 <tr><td class="col-en">To fear = to be afraid of</td><td class="col-hy">վախենալ</td></tr>
 <tr><td class="col-en">The movie was scary = I was scared of the movie</td><td class="col-hy">Ֆիլմը վախենալու էր, ես վախեցա ֆիլմից</td></tr>
+<tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
+<tr><td class="col-en">bad</td><td class="col-hy">վատ</td></tr>
+<tr><td class="col-en">worse</td><td class="col-hy">Ավելի վատ</td></tr>
+<tr><td class="col-en">The worst</td><td class="col-hy">ամենավատ</td></tr>
+<tr><td class="col-en">In general</td><td class="col-hy">առհասարակ</td></tr>
+<tr><td class="col-en">Different = another + singular</td><td class="col-hy">Մեկ այլ, մեկ ուրիշ</td></tr>
+<tr><td class="col-en">Different = other + plural</td><td class="col-hy">Տարբեր, այլ, ուրիշ</td></tr>
+<tr><td class="col-en">Road construction</td><td class="col-hy">Ճանապարհային կառուցապատում</td></tr>
+<tr><td class="col-en">About + number</td><td class="col-hy">մոտավորապես</td></tr>
+<tr><td class="col-en">The Worst job = the worst experience</td><td class="col-hy">Ամենավատ աշխատանքը՝ փորձառությունը</td></tr>
+<tr><td class="col-en">value</td><td class="col-hy">Գնահատել՝ հոգեպես</td></tr>
+<tr><td class="col-en">Evaluate = rate = grade</td><td class="col-hy">Գնահատել՝ բալերով, թվանշաններով</td></tr>
+<tr><td class="col-en">Estimate = prioritize</td><td class="col-hy">Գնահատել՝ ըստ առաջնահերթությունների</td></tr>
+<tr><td class="col-en">Elevator = lift</td><td class="col-hy">վերելակ</td></tr>
+<tr><td class="col-en">Make do = force to do</td><td class="col-hy">Ստիպել անել</td></tr>
+<tr><td class="col-en">exception</td><td class="col-hy">բացառություն</td></tr>
+<tr><td class="col-en">I’m not an exception</td><td class="col-hy">Ես բացառություն չեմ</td></tr>
+<tr><td class="col-en">wise</td><td class="col-hy">խելամիտ</td></tr>
+<tr><td class="col-en">Adult = grown up</td><td class="col-hy">Մեծահասակ, չափահաս</td></tr>
+<tr><td class="col-en">As an adult</td><td class="col-hy">Որպես չափահաս</td></tr>
+<tr><td class="col-en">Twist around one’s finger = lead by the nose</td><td class="col-hy">Մատի վրա պտտացնել</td></tr>
+<tr><td class="col-en">regret</td><td class="col-hy">փոշմանել</td></tr>
 
     </tbody>
 </table>
