--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin-top: 20px;
             margin-bottom: 40px;
         }
-
+        
         th, td {
             border: 1px solid #333;
             padding: 8px;
@@ -316,6 +316,39 @@
 <tr><td class="col-en">As an adult</td><td class="col-hy">Որպես չափահաս</td></tr>
 <tr><td class="col-en">Twist around one’s finger = lead by the nose</td><td class="col-hy">Մատի վրա պտտացնել</td></tr>
 <tr><td class="col-en">regret</td><td class="col-hy">փոշմանել</td></tr>
+<tr><td class="col-en">-----</td><td class="col-hy">------</td></tr>
+        <tr><td class="col-en">Look at</td><td class="col-hy">Նայել ինչ-որ բանի</td></tr>
+<tr><td class="col-en">Death sentence</td><td class="col-hy">Մահապատիժ</td></tr>
+<tr><td class="col-en">Look after</td><td class="col-hy">Տիրություն անել</td></tr>
+<tr><td class="col-en">Have a glimpse</td><td class="col-hy">Աչք գցել</td></tr>
+<tr><td class="col-en">Look through</td><td class="col-hy">Աչքի անցնել</td></tr>
+<tr><td class="col-en">Penalty</td><td class="col-hy">Տուգանք, դատավճիռ</td></tr>
+<tr><td class="col-en">Look for</td><td class="col-hy">Փնտրել</td></tr>
+<tr><td class="col-en">Make a mess = cause mess</td><td class="col-hy">Խառնաշփոթ առաջացնել</td></tr>
+<tr><td class="col-en">Look up/down</td><td class="col-hy">Նայել վեր/վար</td></tr>
+<tr><td class="col-en">Criticize</td><td class="col-hy">Քննադատել</td></tr>
+<tr><td class="col-en">Rule</td><td class="col-hy">Կանոն</td></tr>
+<tr><td class="col-en">Judge</td><td class="col-hy">Դատել</td></tr>
+<tr><td class="col-en">Law</td><td class="col-hy">Օրենք</td></tr>
+<tr><td class="col-en">Way of thinking = mindset</td><td class="col-hy">Մտածելակերպ</td></tr>
+<tr><td class="col-en">Ban = prohibit</td><td class="col-hy">Արգելել</td></tr>
+<tr><td class="col-en">Remove</td><td class="col-hy">Հանել, վերացնել</td></tr>
+<tr><td class="col-en">Invite - այ</td><td class="col-hy">Հրավիրել</td></tr>
+<tr><td class="col-en">Strongest</td><td class="col-hy">Ամենաուժեղ</td></tr>
+<tr><td class="col-en">Invade - էյ</td><td class="col-hy">Գրավել</td></tr>
+<tr><td class="col-en">Smartest</td><td class="col-hy">Ամենախելացի</td></tr>
+<tr><td class="col-en">Border</td><td class="col-hy">Սահման</td></tr>
+<tr><td class="col-en">Overwhelmed = exhausted = tired = stressed</td><td class="col-hy">Հոգնած, լարված</td></tr>
+<tr><td class="col-en">Tension = stress</td><td class="col-hy">Լարվածություն, սթրես</td></tr>
+<tr><td class="col-en">Overloaded</td><td class="col-hy">Գերծանրաբեռնված</td></tr>
+<tr><td class="col-en">Usually = mainly = mostly</td><td class="col-hy">Հիմնականում</td></tr>
+<tr><td class="col-en">Relaxed = calm</td><td class="col-hy">Հանգիստ</td></tr>
+<tr><td class="col-en">Solution = variant</td><td class="col-hy">Լուծում, տարբերակ</td></tr>
+<tr><td class="col-en">Take the stress (tension) away (out)</td><td class="col-hy">Հանել լարվածությունը</td></tr>
+<tr><td class="col-en">Mentally</td><td class="col-hy">Հոգեպես</td></tr>
+<tr><td class="col-en">Endlessly = constantly</td><td class="col-hy">Անվերջ, անդադար</td></tr>
+<tr><td class="col-en">Physically</td><td class="col-hy">Ֆիզիկապես</td></tr>
+<tr><td class="col-en">Near = next to</td><td class="col-hy">Կողքին, մոտ</td></tr>
 
     </tbody>
 </table>
