--- a/index.html
+++ b/index.html
@@ -349,6 +349,22 @@
 <tr><td class="col-en">Endlessly = constantly</td><td class="col-hy">Անվերջ, անդադար</td></tr>
 <tr><td class="col-en">Physically</td><td class="col-hy">Ֆիզիկապես</td></tr>
 <tr><td class="col-en">Near = next to</td><td class="col-hy">Կողքին, մոտ</td></tr>
+<tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
+<tr><td class="col-en">Dedicated</td><td class="col-hy">Նվիրված</td></tr>
+<tr><td class="col-en">Keep in touch = chat = talk = communicate = keep communication</td><td class="col-hy">Կապ պահել, կապի մեջ լինել, շփվել, գրվել</td></tr>
+<tr><td class="col-en">Dictator</td><td class="col-hy">Բռնապետ</td></tr>
+<tr><td class="col-en">Scroll = look through</td><td class="col-hy">Թերթել, աչքի անցնել</td></tr>
+<tr><td class="col-en">Detractor</td><td class="col-hy">Դժգոհ օգտատեր</td></tr>
+<tr><td class="col-en">Confident</td><td class="col-hy">Վստահ</td></tr>
+<tr><td class="col-en">Title (այ), subtitle</td><td class="col-hy">Վերնագիր, ենթատառեր</td></tr>
+<tr><td class="col-en">Reliable = trustworthy</td><td class="col-hy">Վստահելի</td></tr>
+<tr><td class="col-en">Surf the net</td><td class="col-hy">Որոնել համացանցում</td></tr>
+<tr><td class="col-en">To be (feel) bored</td><td class="col-hy">Ձանձրանալ</td></tr>
+<tr><td class="col-en">Once a + time period</td><td class="col-hy">Մեկ անգամ + ժամանակահատված</td></tr>
+<tr><td class="col-en">When I’m bored</td><td class="col-hy">Երբ ես ձանձրանում եմ</td></tr>
+<tr><td class="col-en">Once an hour</td><td class="col-hy">Ժամը մեկ</td></tr>
+<tr><td class="col-en">It doesn’t depend on</td><td class="col-hy">Կախված չէ</td></tr>
+<tr><td class="col-en">It has become</td><td class="col-hy">Այն դարձել է, դա դարձել է</td></tr>
 
     </tbody>
 </table>
