--- a/index.html
+++ b/index.html
@@ -45,15 +45,17 @@
 
 <h2>English - Armenian Word List</h2>
 
-<button id="b1">Hide English</button>
-<button id="b2">Hide Armenian</button>
-
-<table>
-    <thead>
 <div class="fixed-buttons">
     <button id="b1">Hide English</button>
     <button id="b2">Hide Armenian</button>
 </div>
+
+<table>
+    <thead>
+    <tr>
+        <th class="col-en">English</th>
+        <th class="col-hy">Armenian</th>
+    </tr>
     </thead>
     <tbody>
     <tr><td class="col-en">describe</td><td class="col-hy">նկարագրել</td></tr>
