--- a/index.html
+++ b/index.html
@@ -372,6 +372,21 @@
 <tr><td class="col-en">Once an hour</td><td class="col-hy">Ժամը մեկ</td></tr>
 <tr><td class="col-en">It doesn’t depend on</td><td class="col-hy">Կախված չէ</td></tr>
 <tr><td class="col-en">It has become</td><td class="col-hy">Այն դարձել է, դա դարձել է</td></tr>
+<tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
+        <tr><td class="col-en">There are</td><td class="col-hy">կան</td></tr>
+<tr><td class="col-en">There are some days when…</td><td class="col-hy">Կան օրեր, երբ․․․</td></tr>
+<tr><td class="col-en">surrounding</td><td class="col-hy">Շրջակա միջավայր</td></tr>
+<tr><td class="col-en">loneliness</td><td class="col-hy">միայնություն</td></tr>
+<tr><td class="col-en">once</td><td class="col-hy">Մեկ անգամ</td></tr>
+<tr><td class="col-en">One - ones</td><td class="col-hy">Փոխարինում է գոյականին</td></tr>
+<tr><td class="col-en">To have one friend or to have a few ones</td><td class="col-hy">Ունենալ 1 ընկեր, թե մի քանի</td></tr>
+<tr><td class="col-en">In course of time = gradually</td><td class="col-hy">Աստիճանաբար, ժամանակի ընթացքում</td></tr>
+<tr><td class="col-en">Another one</td><td class="col-hy">Մեկ այլ</td></tr>
+<tr><td class="col-en">Circle of friends</td><td class="col-hy">Ընկերների շրջան</td></tr>
+<tr><td class="col-en">Lessen = decrease</td><td class="col-hy">նվազել</td></tr>
+<tr><td class="col-en">Quality matters</td><td class="col-hy">Որակը նշանակություն ունի</td></tr>
+<tr><td class="col-en">heritage</td><td class="col-hy">ժառանգություն</td></tr>
+<tr><td class="col-en">During the live = in our live</td><td class="col-hy">Մեր կյանքում՝ կյանքի ընթացքում</td></tr>
 
     </tbody>
 </table>
