--- a/index.html
+++ b/index.html
@@ -387,6 +387,25 @@
 <tr><td class="col-en">Quality matters</td><td class="col-hy">Որակը նշանակություն ունի</td></tr>
 <tr><td class="col-en">heritage</td><td class="col-hy">ժառանգություն</td></tr>
 <tr><td class="col-en">During the live = in our live</td><td class="col-hy">Մեր կյանքում՝ կյանքի ընթացքում</td></tr>
+<tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
+        <tr><td class="col-en">On one hand</td><td class="col-hy">Մի կողմից․․․</td></tr>
+<tr><td class="col-en">On the other hand</td><td class="col-hy">Մյուս կողմից․․․</td></tr>
+<tr><td class="col-en">way = path, method, means</td><td class="col-hy">Ճամփա, ուղի, ձև, միջոց</td></tr>
+<tr><td class="col-en">On my way</td><td class="col-hy">Իմ ճանապարհին</td></tr>
+<tr><td class="col-en">In this way</td><td class="col-hy">Այդ ձևով</td></tr>
+<tr><td class="col-en">The way of learning</td><td class="col-hy">Սովորելու ձևը</td></tr>
+<tr><td class="col-en">I’m fine with my life</td><td class="col-hy">Ինձ դուր է գալիս իմ կյանքը</td></tr>
+<tr><td class="col-en">If I could… I would…</td><td class="col-hy">Եթե կարողանայի․․․ կանեի․․․</td></tr>
+<tr><td class="col-en">To be honest…</td><td class="col-hy">Անկեղծ ասած․․․</td></tr>
+<tr><td class="col-en">regret</td><td class="col-hy">Զղջալ, ափսոսալ</td></tr>
+<tr><td class="col-en">apply</td><td class="col-hy">կիրառել</td></tr>
+<tr><td class="col-en">Applied maths</td><td class="col-hy">Կիրառական մաթեմատիկա</td></tr>
+<tr><td class="col-en">As though = as if</td><td class="col-hy">կարծես</td></tr>
+<tr><td class="col-en">despite</td><td class="col-hy">չնայած</td></tr>
+<tr><td class="col-en">Despite the fact that…</td><td class="col-hy">Չնայած այն փաստին, որ․․․</td></tr>
+<tr><td class="col-en">wonder</td><td class="col-hy">Հետաքրքրվել, մտածել․ տեսնես․․․</td></tr>
+<tr><td class="col-en">I was wondering…</td><td class="col-hy">Ինձ հետաքրքիր էր․․․ ես մտածում էի․․․</td></tr>
+<tr><td class="col-en">Go ahead = go on</td><td class="col-hy">շարունակել</td></tr>
 
     </tbody>
 </table>
