--- a/index.html
+++ b/index.html
@@ -406,6 +406,34 @@
 <tr><td class="col-en">wonder</td><td class="col-hy">Հետաքրքրվել, մտածել․ տեսնես․․․</td></tr>
 <tr><td class="col-en">I was wondering…</td><td class="col-hy">Ինձ հետաքրքիր էր․․․ ես մտածում էի․․․</td></tr>
 <tr><td class="col-en">Go ahead = go on</td><td class="col-hy">շարունակել</td></tr>
+<tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
+        <tr><td class="col-en">Accomplishment = achievement</td><td class="col-hy">նվաճում</td></tr>
+<tr><td class="col-en">Accomplish = achieve</td><td class="col-hy">ավարտել</td></tr>
+<tr><td class="col-en">My proudest achievement</td><td class="col-hy">Իմ ամենամեծ նվաճումը</td></tr>
+<tr><td class="col-en">So far</td><td class="col-hy">Մինչ այժմ</td></tr>
+<tr><td class="col-en">Make up my mind = decide</td><td class="col-hy">որոշել</td></tr>
+<tr><td class="col-en">Weight the pros and cons / advantages and disadvantages</td><td class="col-hy">Հաշվարկել առավելություններն ու թերությունները</td></tr>
+<tr><td class="col-en">Assess = count = measure</td><td class="col-hy">հաշվարկել</td></tr>
+<tr><td class="col-en">Catchy</td><td class="col-hy">գրավիչ</td></tr>
+<tr><td class="col-en">Match = suit</td><td class="col-hy">սազել</td></tr>
+<tr><td class="col-en">Come from = arise = have origin</td><td class="col-hy">Ծագել ինչ-որ տեղից, սկիզբ առնել</td></tr>
+<tr><td class="col-en">Trust</td><td class="col-hy">վստահել</td></tr>
+<tr><td class="col-en">Test</td><td class="col-hy">փորձարկել</td></tr>
+<tr><td class="col-en">Taste</td><td class="col-hy">համտեսել</td></tr>
+<tr><td class="col-en">Tangerine</td><td class="col-hy">մանդարին</td></tr>
+<tr><td class="col-en">From the first glance</td><td class="col-hy">Առաջին հայացքից</td></tr>
+<tr><td class="col-en">Space</td><td class="col-hy">Տարածք, տիեզերք</td></tr>
+<tr><td class="col-en">Spice</td><td class="col-hy">համեմունք</td></tr>
+<tr><td class="col-en">Spicy</td><td class="col-hy">կծու</td></tr>
+<tr><td class="col-en">At least</td><td class="col-hy">առնվազն</td></tr>
+<tr><td class="col-en">It comes from = it arises from = its origin is…</td><td class="col-hy">Այն սկիզբ է առնում․․․</td></tr>
+<tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
+        <tr><td class="col-en">There is a need</td><td class="col-hy">Կարիք կա</td></tr>
+<tr><td class="col-en">There was no need</td><td class="col-hy">Կարիք չկար</td></tr>
+<tr><td class="col-en">I wish there was no need</td><td class="col-hy">Կուզենայի չլիներ</td></tr>
+<tr><td class="col-en">Clue = key</td><td class="col-hy">բանալի</td></tr>
+<tr><td class="col-en">Doubt</td><td class="col-hy">կասկած</td></tr>
+<tr><td class="col-en">Debt</td><td class="col-hy">պարտք</td></tr>
 
     </tbody>
 </table>
