--- a/index.html
+++ b/index.html
@@ -434,6 +434,62 @@
 <tr><td class="col-en">Clue = key</td><td class="col-hy">բանալի</td></tr>
 <tr><td class="col-en">Doubt</td><td class="col-hy">կասկած</td></tr>
 <tr><td class="col-en">Debt</td><td class="col-hy">պարտք</td></tr>
+        <tr><td class="col-en">-----</td><td class="col-hy">-----</td></tr>
+<tr><td class="col-en">But = except for = beside</td><td class="col-hy">բացի</td></tr>
+<tr><td class="col-en">Indeed = absolutely = exactly</td><td class="col-hy">Իրոք, ճիշտ այդպես</td></tr>
+<tr><td class="col-en">Indeed = really</td><td class="col-hy">իսկապես</td></tr>
+<tr><td class="col-en">He is really a good friend = he is a good friend indeed</td><td class="col-hy">Նա իսկապես լավ ընկեր է</td></tr>
+<tr><td class="col-en">Mandatory = a must = required</td><td class="col-hy">պարտադիր</td></tr>
+<tr><td class="col-en">Will</td><td class="col-hy">ցանկություն</td></tr>
+<tr><td class="col-en">So-so</td><td class="col-hy">Ոչինչ, յոլա</td></tr>
+<tr><td class="col-en">Loyalty</td><td class="col-hy">նվիրվածություն</td></tr>
+<tr><td class="col-en">Ability</td><td class="col-hy">ունակություն</td></tr>
+<tr><td class="col-en">Honesty</td><td class="col-hy">անկեղծություն</td></tr>
+<tr><td class="col-en">Match</td><td class="col-hy">համապատասխանել</td></tr>
+<tr><td class="col-en">Tight</td><td class="col-hy">ամուր</td></tr>
+<tr><td class="col-en">Tight-lipped = closed-mouth</td><td class="col-hy">փակբերան</td></tr>
+<tr><td class="col-en">Undoubtedly</td><td class="col-hy">անկասկած</td></tr>
+<tr><td class="col-en">Appear = seem</td><td class="col-hy">թվալ</td></tr>
+<tr><td class="col-en">It appears to me = it seems to me</td><td class="col-hy">Ինձ թվում է</td></tr>
+<tr><td class="col-en">If it was Friday, and I were going home…</td><td class="col-hy">Եթե ուրբաթ լիներ և ես տուն գնայի</td></tr>
+<tr><td class="col-en">Few</td><td class="col-hy">քիչ</td></tr>
+<tr><td class="col-en">A few</td><td class="col-hy">Մի քանի</td></tr>
+<tr><td class="col-en">Willingness</td><td class="col-hy">պատրաստակամություն</td></tr>
+<tr><td class="col-en">In need</td><td class="col-hy">Կարիքի մեջ</td></tr>
+<tr><td class="col-en">At + educational institution</td><td class="col-hy">ուս․հաստատությունում</td></tr>
+<tr><td class="col-en">At university, at school</td><td class="col-hy">Դպրոցում, համալսարանում</td></tr>
+<tr><td class="col-en">To be interested in</td><td class="col-hy">Հետաքրքրված լինել ինչ-որ բանով</td></tr>
+<tr><td class="col-en">My family isn’t interested in English</td><td class="col-hy">Իմ ընտանիքը հետաքրքրված չէ անգլերենով</td></tr>
+<tr><td class="col-en">Sister, brother</td><td class="col-hy">Քույր, եղբայր՝ հարազատ</td></tr>
+<tr><td class="col-en">Cousin</td><td class="col-hy">Քույր, եղբայր՝ ոչ հարազատ</td></tr>
+<tr><td class="col-en">Niece, nephew</td><td class="col-hy">Զարմուհի, զարմիկ</td></tr>
+<tr><td class="col-en">Speak + language</td><td class="col-hy">Խոսել լեզվով, տիրապետել</td></tr>
+<tr><td class="col-en">I speak Armenian, Russian and English</td><td class="col-hy">Ես տիրապետում եմ հայ, ռուս, անգլ․ լեզուներին</td></tr>
+<tr><td class="col-en">In language</td><td class="col-hy">Լեզվով, լեզվի մեջ</td></tr>
+<tr><td class="col-en">Thought</td><td class="col-hy">միտք</td></tr>
+<tr><td class="col-en">Express thoughts</td><td class="col-hy">Արտահայտել մտքերը</td></tr>
+<tr><td class="col-en">Mitigate = reduce</td><td class="col-hy">նվազեցնել</td></tr>
+<tr><td class="col-en">Mitigate risks</td><td class="col-hy">Նվազեցնել ռիսկերը</td></tr>
+<tr><td class="col-en">Pleasant</td><td class="col-hy">հաճելի</td></tr>
+<tr><td class="col-en">Unpleasant</td><td class="col-hy">տհաճ</td></tr>
+<tr><td class="col-en">Likely</td><td class="col-hy">հավանական</td></tr>
+<tr><td class="col-en">Unlikely</td><td class="col-hy">անհավանական</td></tr>
+<tr><td class="col-en">Scenario (s)</td><td class="col-hy">իրավիճակ</td></tr>
+<tr><td class="col-en">In Armenian</td><td class="col-hy">Հայերենով, հայերենում</td></tr>
+<tr><td class="col-en">Majority</td><td class="col-hy">մեծամասնություն</td></tr>
+<tr><td class="col-en">Minority</td><td class="col-hy">փոքրամասնություն</td></tr>
+<tr><td class="col-en">Small = limited</td><td class="col-hy">քիչ</td></tr>
+<tr><td class="col-en">Vocabulary</td><td class="col-hy">բառապաշար</td></tr>
+<tr><td class="col-en">I need</td><td class="col-hy">Ինձ պետք է</td></tr>
+<tr><td class="col-en">It is necessary</td><td class="col-hy">Դա անհրաժեշտ է</td></tr>
+<tr><td class="col-en">I need it = it is necessary for me</td><td class="col-hy">Դա ինձ պետք է (անհրաժեշտություն է ինձ համար)</td></tr>
+<tr><td class="col-en">Pronunciation</td><td class="col-hy">Արտասանություն</td></tr>
+<tr><td class="col-en">Mispronounce</td><td class="col-hy">Սխալ արտասանել</td></tr>
+<tr><td class="col-en">Endings</td><td class="col-hy">վերջավորություն</td></tr>
+<tr><td class="col-en">Stress</td><td class="col-hy">շեշտ</td></tr>
+<tr><td class="col-en">Mention = highlight = emphasize</td><td class="col-hy">Նշել, շեշտել</td></tr>
+<tr><td class="col-en">Effective = productive = efficient</td><td class="col-hy">արդյունավետ</td></tr>
+<tr><td class="col-en">Daily routine</td><td class="col-hy">առօրյա</td></tr>
 
     </tbody>
 </table>
